update blurbs more

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Example longform blog
+title: quill-blog
 url: https://localhost:8080
 baseurl: /
 description: This is a longform theme example for my lightweight blogging framework.
