--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: quill-blog
-url: https://localhost:8080
-baseurl: /
+url: https://rfong.github.io
+baseurl: /quill-blog
 description: This is a longform theme example for my lightweight blogging framework.
 
 feed: feed.xml
