--- a/config_DEV.yml
+++ b/config_DEV.yml
@@ -1,4 +1,4 @@
-title: quill-blog
+title: quill-blog demo
 url: https://localhost:8080/
 baseurl: ''
 description: This is a longform theme example for my lightweight blogging framework.
