--- a/config_GH.yml
+++ b/config_GH.yml
@@ -1,4 +1,4 @@
-title: quill-blog
+title: quill-blog demo
 url: https://rfong.github.io/
 baseurl: 'quill-blog/'
 description: This is a longform theme example for my lightweight blogging framework.
